# llm-server

./: .gitignore  README.md  pyproject.toml
examples/: client.py
scripts/: client.sh  start_dashboard.sh  start_vllm.sh  stop_all.sh  stop_dashboard.sh  stop_vllm.sh
src/llm_server/: dashboard.py
