[project]
name = "llm-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.133.1",
    "openai>=2.24.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "prometheus-client>=0.24.1",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
    "uvicorn>=0.41.0",
    "uvloop>=0.22.1",
    "vllm>=0.16.0",
]
